2007-05-15  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_mailbox.c, dbmail-mailbox.c, test-scripts:
	rebuild uid_msn mapper (bug #578)
	* debian:
	update debian changelog for upcoming release
	* misc.c:
	fix small leaks

2007-05-14  Paul Stevens <paul@nfg.nl>

	* ChangeLog, debian, man:
	downcase all debconf keys
	* configure, configure.in, debian:
	2.2.5-rc2

2007-05-14  Paul J Stevens <paul@nfg.nl>

	* debian:
	downcase all debconf keys
	* configure, configure.in, debian:
	2.2.5-rc2

2007-05-13  Paul Stevens <paul@nfg.nl>

	* ChangeLog, misc.c:
	only iconv_strdup non-utf8 values from database
	* check_dbmail_misc.c, dbmail-message.c, dbmail-message.h, misc.c, 
	misc.h, test-scripts:
	cleanup the convert_8bit functions
	* dbmail-imapsession.c, imapcommands.c, test-scripts:
	be more careful about re-opening mailbox during sessions

2007-05-13  Aaron Stone  <aaron@serendipity.cx>

	* maintenance.c, db.h, db.c, man/dbmail-util.txt:
	Added new option '-r time' to clear old replycache entries. Cleaned
	up the timestrings used to find old ipllog and replycache entries.

2007-05-13  Paul J Stevens <paul@nfg.nl>

	* misc.c:
	only iconv_strdup non-utf8 values from database
	* check_dbmail_misc.c, dbmail-message.c, dbmail-message.h, misc.c, 
	misc.h, test-scripts:
	cleanup the convert_8bit functions
	* dbmail-imapsession.c, imapcommands.c, test-scripts:
	be more careful about re-opening mailbox during sessions

2007-05-12  Paul Stevens <paul@nfg.nl>

	* Makefile.in:
	autotools update
	* Makefile.am, db.c, dbmail-imapsession.c, dbmail-mailbox.c, 
	dbmailtypes.h, dm_imaputil.c, dm_imaputil.h, export.c, imap4.c, 
	modules:
	add message selection using IMAP SEARCH syntax and stdout output to 
	export
	* dbmail-imapsession.c:
	fix typo
	* ChangeLog, dbmail-imapsession.c:
	send EXISTS response when message count stays the same (bug #591)

2007-05-12  Aaron Stone  <aaron@serendipity.cx>

	* pop3d.c, pop3.c, imapd.c, server.c, serverchild.c, dbmailtypes.h,